--- a/Report.Rmd
+++ b/Report.Rmd
@@ -25,12 +25,9 @@ The dataset including: response variable `uterus`(Uterus weight (mg)); key expla
 
 ##### 3.1 EDA
 
-From the plot, we can answer all the questions! 
-
 From the plot, we get main information on the dataset.1)There are significant interaction among variables. Because each labs adopted differet treatment. So we have to include the iteraction into our regression model. 2)Many discrete variables. We need to keep the model simple.
 
-
-I chose boxplot to illustrate the relationship between continuous variable (`uterus`) and discrete variable(`EE` and `ZM`).Different colors represent different `labs`, and I use facet to represent different `protocol`. From the plot1, we can see that: 1)The trend for expection looks like quadratic form; But overall, the uterus decrease as the zm increase; The variance under different level of `ZM` is different. The variance of `ZM`=0 is much larger than the other two groups; 2)Overall, the boxplots look similar. However, the different labs act different especially when `ZM`=0. Some labs, like TNO in `protocol="B"`,`ZM=0.1` acts like an "outlier". There is interaction between `lab` and `ZM`. 3)Each labs adopted different treatment. So for some case, limited labs conducted the study. Similar for the case `EE`.
+I chose boxplot to illustrate the relationship between continuous variable (`uterus`) and discrete variable(`EE` and `ZM`).Different colors represent different `labs`, and I use facet to represent different `protocol`. From the plot1, we can see that: 1)Overall, the uterus decrease as the zm increase; The variance under different level of `ZM` is different. The variance of `ZM`=0 is much larger than the other two groups; 2)Overall, the boxplots look similar. However, the different labs act different, especially when `ZM`=0. Some labs, like TNO in `protocol="B"`,`ZM=0.1` acts like an "outlier". There is interaction between `lab` and `ZM`. 3)Each labs adopted different treatment. So for some case, limited labs conducted the study. Similar for the case `EE`.
 
 I chose scatterplots with regression line to illustrate the relationship between two continuous variable (`uterus` and `weight`). Because the significant differece on `weight` between immature rats and adult rats, I use facet to represent different `protocol`. Notice the range for y-axis is different. We can see that: 1)For immature rats, `weight` seems do not effect the `uterus`. While for adult rats, the `uterus` decrease as the `weight` increase. There is significant interaction.
 
@@ -114,14 +111,11 @@ Notices: all the outliers appears in protocol C,D. This suggest us these procoto
 
 #### 4.Conclusion
 
-Overall, uterotrophic bioassay successful overal at identifying effects of EE and ZM.The change dose for EE is 3. Dose larger than this have significant effect while less than this is not significant.The protocols differ in their sensitivity to detecting the effect. Protocol B would be recommended.
+Overall, uterotrophic bioassay successful overal at identifying effects of EE and ZM.The change dose for EE is 3. Dose larger than this have significant effect while less than this is not significant.The protocols differ in their sensitivity to detecting the effect. Protocol B would be recommended. Futher improvement is to reparametrize the level for protocol to compare protocol A and protocol B.
 
 The result is not consistent among labs. First, there are some labs fail to detect such effects:Huntingd, Bayer, ChungKor, TNO, Zeneca. Second, the changing value for dose varies across labs. One of the reasons is for different labs, the dose changing points is different. For example, Sumitomo. EE0.3 may be the changing dose point. For Huntingd, EE0.1 may be the changing dose point. Third, dose reponse vary across labs. The labs Berlin and Sumitomo stands out as being different.(with pvalue<0.001 for EE:labs). The labs Bayer,Poulenc,Zeneca stands out as being different.(with pvalue<0.005 for ZM:labs)
 
-Note: 
-
-Futher improvement is to reparametrize the level for protocol to compare protocol A and protocol B.
-
+EDA can help us answer part of the questions. The dose response vary across labs because the different shape and location of boxplot. The certain "box" behave different may be the "outlier" we want to find in b. Protocol differs in sensitivity for the length of "box" is different in 4 facets. Protocol A may be recommeded for it keep the consistence among labs. And the variance for each lab in A is smaller compared to other groups. Worth noting, I use EDA to help me deal with outliers.
 
 ```{r library, message=FALSE, warning=FALSE,echo=FALSE}
 library(tibble)
